# assrender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  assrender.sln  assrender.vcxproj
.github/workflows/: check-smp.yml  check-smp.yml.old  github-ci.yml
docs/: BUILD.md  CHANGELOG.md  README.md
src/: ASSRender.rc  CMakeLists.txt  assrender.c  assrender.h  render.c  render.h  sub.c  timecodes.c
